backend/kustomize/base/webserver/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: oetzi
          # NOTE: use `minikube image load oetzi:latest` to push into container runtime
          image: oetzi:latest
          # NOTE: Never is useful only for locla testing in order to load image from cache
          imagePullPolicy: Never
          resources: {}
          ports:
            - name: http
              containerPort: 80
          command: ["npm", "run", "serve"]
